--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mobx-react": "^7.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.3",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.26.0",
